@@ -1,3 +1,8 @@
+2003-12-04 arne
+
+	* fix for nested CViewContainers
+	* fix for using vstgui for other than VST ;-)
+
 2003-11-15 arne
 
 	***************
